--- a/ui/src/main/webapp/styles.css
+++ b/ui/src/main/webapp/styles.css
@@ -14,6 +14,15 @@ h1, h2, h3, h4, h5 {
 }
 
 input {
+    border: 0px;
+    padding: 0px;
+    margin: 0px;
+}
+
+#blur {
+    position: absolute;
+    width: 0px;
+    height: 0px;
 }
 
 table {
@@ -95,8 +104,8 @@ table {
     color: #a4de0d;
 }
 
-.dt-editor .timecode {
-    color: #ead86d;
+.dt-editor time {
+    color: #b5a754;
 }
 
 .dt-editor .other {
